manifest/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-mr-blocker
  labels:
    app: gitlab-mr-blocker
    app.kubernetes.io/name: gitlab-mr-blocker
spec:
  type: ClusterIP
  selector:
    app: gitlab-mr-blocker
  ports:
    - name: http
      port: 8000
      targetPort: http
