manifest/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-mr-blocker
  labels:
    app: gitlab-mr-blocker
    app.kubernetes.io/name: gitlab-mr-blocker
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 2m
spec:
  rules:
    - host: jira-sync-mr-blocker.ppl.cs.ui.ac.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitlab-mr-blocker
                port:
                  number: 8000
  tls:
    - hosts:
        - jira-sync-mr-blocker.ppl.cs.ui.ac.id
      secretName: cs12-tls
